--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@ mixpanel.init("37d2da19967d2ace779625f9cbd057d3");</script><!-- end Mixpanel -->
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Repositories Linked.</h3>
 For Courses:
 <ul>
-    <li>C++ For Finance</li>
+    <li><a href="https://gengler1123.github.io/Cpp-For-Finance/">C++ For Finance</a></li>
 
-    <li>GPU Computing For Finance</li>
+    <li><a href="https://gengler1123.github.io/Cpp-For-Finance/">GPU Computing For Finance</a></li>
 
 </ul>
 
