--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ For Papers:
 
 Code Examples:
 <ul>
-	<li><a href="https://gengler1123.github.io/DBSCAN_Example.html">DBSCAN</a></li>
+	<li><a href="https://gengler1123.github.io/DBSCAN Example.html">DBSCAN</a></li>
 </ul>
         
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
