--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ For Courses:
 <ul>
     <li><a href="https://gengler1123.github.io/Cpp-For-Finance/">C++ For Finance</a></li>
 
-    <li><a href="https://gengler1123.github.io/Cpp-For-Finance/">GPU Computing For Finance</a></li>
+    <li><a href="https://gengler1123.github.io/GPU-Computing-For-Finance/">GPU Computing For Finance</a></li>
 
 </ul>
 
