--- a/index.html
+++ b/index.html
@@ -38,16 +38,24 @@ mixpanel.init("37d2da19967d2ace779625f9cbd057d3");</script><!-- end Mixpanel -->
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
-          <h3>
 
 
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Repositories Linked.</h3>
+     
+
+My name is Gary R. Engler and this is my website containing repositories both for the courses and workshops I am teaching, and repositories for research papers I've worked on.
+
+<h3><a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Repositories Linked.</h3>
 For Courses:
 <ul>
     <li><a href="https://gengler1123.github.io/Cpp-For-Finance/">C++ For Finance</a></li>
 
     <li><a href="https://gengler1123.github.io/GPU-Computing-For-Finance/">GPU Computing For Finance</a></li>
 
+</ul>
+
+For Workshops:
+<ul>
+    <li><a href="">Deep Learning in Finance</a></li>
 </ul>
 
 For Papers:
@@ -60,29 +68,47 @@ Code Examples:
 	<li><a href="https://gengler1123.github.io/DBSCAN Example.html">DBSCAN</a></li>
 </ul>
         
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Research Interests.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://gengler1123.github.io/sample.html">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+My research interests include:
+<ul>
+    <li>Dynamical Systems</li>
+    <li>Mathematical Modeling of Systems</li>
+    <li>Spiking Neural Networks</li>
+    <li>Machine Learning</li>
+</ul>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Courses and Workshops Taught</h3>
 
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
+Courses:
+<ul>
+    <li>FE 540: Probability and Stochastic Processes for Financial Engineering</li>
+    <li>FE 522: C++ for Finance</li>
+    <li>FE 519: GPU Computing for Finance</li>
+    <li>QF 465: C++ For Finance</li>
+</ul>
+Workshops:
+<ul>
+    <li>Deep Learning Applications to Finance</li>
+</ul>
+Teaching Assistant:
+<ul>
+    <li>MA 121-124: Calculus Sequence</li>
+    <li>MA 219: Probability and Statistics</li>
+</ul>
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Useful Links</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+
+<ul>
+    <li>Codefights</li>
+
+</ul>
+
+<!---<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>--->
+
+
       </section>
 
     </div>
