--- a/index.html
+++ b/index.html
@@ -73,9 +73,27 @@ Code Examples:
 My research interests include:
 <ul>
     <li>Dynamical Systems</li>
-    <li>Mathematical Modeling of Systems</li>
-    <li>Spiking Neural Networks</li>
-    <li>Machine Learning</li>
+
+    <li>Mathematical Modeling
+    <ul>
+        <li>Modeling spiking neural networks and the application of various learning algorithms to the network.</li>
+        <li>Using High Performance Computing principles, such as GPU computing using CUDA C to improve performance for large models.</li>
+    </ul>
+    </li>
+    
+    <li>Systems Neuroscience
+    <ul>
+        <li>Spatial navigation involving <i>grid</i> and <i>place</i> cells in the <a href="https://en.wikipedia.org/wiki/Hippocampal_formation">hippocampal formation.</a></li>
+        <li>Working to determine what internal model the cell behavior is computing.</li>
+    </ul>
+    </li>
+
+    <li>Machine Learning and Control
+    <ul>
+        <li>Applications of Convolutional Neural Networks to Financial Data</li>
+        <li>Controlling multiple robotic systems through the cloud.</li>
+    </ul>
+    </li>
 </ul>
 
 <h3>
@@ -102,8 +120,11 @@ Teaching Assistant:
 
 
 <ul>
-    <li>Codefights</li>
-
+    <li><a href="https://codefights.com/">Codefights</a></li>
+    <li><a href="https://www.codecademy.com/">Code Academy</a></li>
+    <li><a href="http://www.cplusplus.com/doc/tutorial/">C++ Reference Material: cplusplus.com</a></li>
+    <li><a href="https://www.tutorialspoint.com/cplusplus/">C++ Reference Material: tutorialspoint.com</a></li>
+    <li><a href="https://www.tutorialspoint.com/python/">Python Reference Material: tutorialspoint.com</a></li>
 </ul>
 
 <!---<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>--->
