--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Gengler1123.GitHub.io by gengler1123</title>
+    <title>Gary R. Engler</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -42,7 +42,7 @@ mixpanel.init("37d2da19967d2ace779625f9cbd057d3");</script><!-- end Mixpanel -->
 
      
 
-My name is Gary R. Engler and this is my website containing repositories both for the courses and workshops I am teaching, and repositories for research papers I've worked on.
+Hello.  This is the website walking through my public repositories of codes, tutorials, and courses.  I currently work as a Machine Learning Systems Architect / Senior Data Scientist for <a href="http://elementalpath.com">Elemental Path</a>. 
 
 <h3><a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Repositories Linked.</h3>
 For Courses:
